<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/black"
        android:text="@string/bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUrlBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBankName" />

    <TextView
        android:id="@+id/tvBankPhoneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/phone_bank"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUrlBankName" />

    <TextView
        android:id="@+id/tvSetBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/whitespace"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvBankName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSetUrlBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/whitespace"
        app:layout_constraintStart_toEndOf="@+id/tvUrlBankName"
        app:layout_constraintTop_toBottomOf="@+id/tvSetBankName" />

    <TextView
        android:id="@+id/tvSetPhoneBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/whitespace"
        app:layout_constraintStart_toEndOf="@+id/tvBankPhoneName"
        app:layout_constraintTop_toBottomOf="@+id/tvSetUrlBank" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBankPhoneName" />
</androidx.constraintlayout.widget.ConstraintLayout>